<resources>
    <string name="app_name">Gestnet_SGSv2</string>
    <string name="login">LOGIN</string>
    <string name="contraseña">CONTRASEÑA</string>
    <string name="usuario">USUARIO</string>
    <string name="documentos">DOCUMENTOS</string>
    <string name="averias">AVERIAS</string>
    <string name="mantenimientos">MANTENIMIENTOS</string>
    <string name="almacen">ALMACEN</string>
    <string name="buscar_parte">BUSCAR PARTE</string>
    <string name="ajustes">AJUSTES</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
    <string name="opciones">OPCIONES</string>
    <string name="coger_datos">Cogiendo datos del servidor</string>
    <string name="datos_tecnico">Guardando datos del técnico</string>
    <string name="datos_averia">Guardando datos de las averias</string>
    <string name="datos_mantenimiento">Guardando datos de los mantenimientos</string>
    <string name="datos_tipo_caldera">Guardando datos de los tipos de equipo</string>
    <string name="datos_marca_caldera">Guardando datos de las marcas de equipo</string>
    <string name="datos_uso_caldera">Guardando datos de los usos de equipo</string>
    <string name="datos_potencia">Guardando potencias de la equipo</string>
    <string name="title_activity_index">Gestnet_SGS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="acceso">ACCESO</string>
    <string name="entrar">ENTRAR</string>
    <string name="contraseña_olvidada">¿Has olvidado tu contraseña?</string>
    <string name="nueva_incidencia">NUEVA INCIDENCIA</string>
    <string name="incidencias_resueltas_en_periodo">Las incidencias seran resueltas en un periodo de 48 - 72h.</string>
    <string name="enviar">ENVIAR</string>
    <string name="datos_usuario">DATOS DEL USUARIO</string>
    <string name="num_orden_iberdrola">Num. orden: </string>
    <string name="tipo_intervencion">Tipo de intervencion: </string>
    <string name="venta">Venta: </string>
    <string name="tipo_visita">Tipo visita: </string>
    <string name="tipo_mantenimiento">Tipo mantenimiento: </string>
    <string name="contador_averias">Num. averias: </string>
    <string name="contrato">Num. Contrato: </string>
    <string name="num_parte">Num. Parte: </string>
    <string name="maquina">Maquina</string>
    <string name="fecha_llamada">Fecha llamada: </string>
    <string name="franja_horaria">Franja horaria: </string>
    <string name="tipo_urgencia">Tipo urgencia: </string>
    <string name="observaciones">Observaciones: </string>
    <string name="telefonos">Telefonos: </string>
    <string name="iniciar_parte">INICIAR PARTE</string>
    <string name="confirmar_telefono">ACTUALIZAR DATOS DEL USUARIO</string>
    <string name="datos_tipo_estado">guardando estados</string>
    <string name="datos_tipo_rparacion">Guardando tipo de reparacion</string>
    <string name="buscando_bluetooth">Buscando Dispositivos Bluetooth</string>
    <string name="conectando_bluetooth">Conectando con el dispositivo Bluetooth</string>
    <string name="datos_tipo_visita">guardando tipos de visita</string>
    <string name="datos_subtipo_visita">guardando subtipos de visita</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="conectando">Conectando</string>
    <string name="err_impr">Se ha producido un error al conectar con la impresora.</string>
    <string name="mac_testo">MAC_TESTO</string>
    <string name="err_durante_impr">Se ha producido un error durante la impresión.</string>
    <string name="parte_finalizado">PARTE FINALIZADO</string>
    <string name="introducir_nombre">Introduzca su nombre</string>
    <string name="subir_ticket">Subiendo ticket</string>
    <string name="cambiar_fecha">Cambiar Fecha</string>
    <string name="title_activity_mapa">Map</string>
    <string name="seleccione_tipo_maquina">Selecciona un tipo de maquina</string>
    <string name="seleccione_marca_maquina">Selecciona una marca de maquina</string>
    <string name="seleccione_uso_maquina">Selecciona un uso de maquina</string>
    <string name="seleccione_potencia_maquina">Selecciona una potencia de maquina</string>
    <string name="seleccione_puesta_maquina">Selecciona la puesta en marcha de maquina</string>
    <string name="seleccione_estado_visita">Selecciona un estado de visita</string>
    <string name="seleccione_tipo_visita">Selecciona un tipo de visita</string>
    <string name="seleccione_tipo_reparacion">Selecciona un tipo de reparacion</string>
    <string name="seleccione_tiempo_mano_obra">Selecciona un tiempo de mano de obra</string>
    <string name="sacar_foto">SACAR FOTO</string>
    <string name="tomar_foto">TOMAR FOTO</string>
    <string name="guardar_imagen">GUARDAR IMAGEN</string>
    <string name="nombre_imagen">NOMBRE DE LA IMAGEN</string>
    <string name="guardar">GUARDAR</string>
    <string name="seleccionar_archivo">SELECCIONAR ARCHIVO</string>
    <string name="scan">Scan</string>
    <string name="subir_datos">Subir datos</string>
    <string-array name="tipoVisita">
        <item>--Seleccione un valor--</item>
        <item>Sin defectos</item>
        <item>Precintado de instalación</item>
        <item>Anomalia secundaria</item>
        <item>Defectos menores</item>
    </string-array>
    <string-array name="estadosVisita">
        <item>--Seleccione un valor--</item>
        <item>Cancelada - Ausente por segunda vez</item>
        <item>Cancelada - Cliente no desea visita</item>
        <item>Cancelada - Cliente no localizable</item>
        <item>Cancelada - Quiere darse de baja</item>
        <item>Cerrada</item>
        <item>Cerrada - Pendiente realizar reparación</item>
        <item>En Ejecución</item>
        <item>Pendiente</item>
        <item>Programada</item>
        <item>Sistema: Cancelada por sistema</item>
        <item>Pendiente de contactar</item>
    </string-array>
    <string-array name="tiempoReparacion">
        <item>--Seleccione un valor--</item>
        <item>2 horas o mas</item>
        <item>De 1 a 2 horas</item>
        <item>Menos de 1 hora</item>
    </string-array>
    <string-array name="equipamientos">
        <item>--Seleccione un valor--</item>
        <item>Cocina</item>
        <item>Horno</item>
        <item>Horno + Grill</item>
    </string-array>
    <string name="menu_settings">Settings</string>
    <string name="button_print">Print</string>
    <string name="button_printer_settings">Printer Settings</string>
    <string name="button_transfer_template">Transfer Template</string>
    <string name="button_remove_template">Remove Template</string>
    <string name="button_select_file">Select File</string>
    <string name="button_select">Select</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_get_list">Get List</string>
    <string name="button_bluetooth_settings">Bluetooth Settings</string>
    <string name="button_network_settings">Network Settings</string>
    <string name="button_device_settings">Device Settings</string>
    <string name="pj_700_series">PJ-700 Series</string>
    <string name="rj_4030ai">RJ-4030Ai</string>
    <string name="mw_series">MW Series</string>
    <string name="file_explorer_title">File Explorer</string>
    <string name="button_printer_status">Printer Status</string>
    <string name="text_select_pdz">Select a pdz or blf file</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_select_image">Select image/prn file</string>
    <string name="text_input_data">Input Data:</string>
    <string name="text_template_Index">Index:</string>
    <string name="text_template_name">Name:</string>
    <string name="text_template_text">Text:</string>
    <string name="text_template_key">Template Key:</string>
    <string name="text_template_replace_texts">Replace Texts:</string>
    <string name="text_select_pdf">Select a pdf file</string>
    <string name="text_pdf_pages_start">Start Page:</string>
    <string name="text_pdf_pages_end">End Page:</string>
    <string name="chkbox_multiple_select">Multiple Select</string>
    <string name="chkbox_all_pages">All pages</string>
    <string name="text_print_image">Print Image/Prn File</string>
    <string name="text_print_pdf">Print Pdf File</string>
    <string name="text_print_template">Print Template</string>
    <string name="text_transfer_manager">Manage Templates</string>
    <string name="text_transfer_pdz">Transfer Template File</string>
    <string name="text_device_setting">Device Settings</string>
    <string name="text_remove_template">Remove Template File</string>
    <string name="text_not_exit_template">Template does not exit.</string>
    <string name="UnableAccess">Unable Access…</string>
    <string name="noNetDevice">No Net Printer Found</string>
    <string name="setting_printer">Basic Settings</string>
    <string name="setting_alignment">Set Alignment</string>
    <string name="setting_PJ">Set PocketJet Parameter</string>
    <string name="printer_title">Printer</string>
    <string name="printer_text">Select a destination printer</string>
    <string name="setting_label">Settings</string>
    <string name="about_label">About</string>
    <string name="about_title">Brother Print Sdk Demo</string>
    <string name="about_text">Ver.3.0.4\n© 2016 Brother Industries, Ltd.\n</string>
    <string name="netPrinterListTitle_label">Net Printer</string>
    <string name="progressDialogMessage_preparingConnection">Preparing the connection…</string>
    <string name="progressDialogMessage_createData">Creating the data</string>
    <string name="progressDialogMessage_sendingData">Sending the data…</string>
    <string name="progressDialogMessage_sendingPrintingData">Sending the data…</string>
    <string name="progressDialogMessage_startPrint">Printing the data </string>
    <string name="progressDialogMessage_dataSent">The data was sent </string>
    <string name="progressDialogMessage_printed">The printing process was completed </string>
    <string name="progressDialogMessage_CloseConnection">Closing the connection</string>
    <string name="progressDialogMessage_SetPaper">Please Set Paper</string>
    <string name="progressDialogMessage_CoolingStart">Printer cooling start</string>
    <string name="progressDialogMessage_CoolingEnd">Printer cooling end</string>
    <string name="progressDialogMessage_WaitingPeel">Wait for peeling label</string>
    <string name="progressDialogMessage_sendingTemplateData">File transferring</string>
    <string name="progressDialogMessage_getting_bluetoothsetting">Getting Bluetooth settings </string>
    <string name="progressDialogMessage_setting_bluetoothsetting">Transfering Bluetooth settings </string>
    <string name="progressDialogMessage_removing_template">Removing templates </string>
    <string name="progressDialogMessage_getting_template">Getting template list </string>
    <string name="ErrorMessage_ERROR_NONE">Succeeded</string>
    <string name="alertDialogMessage_runtimeError">Runtime error occurred </string>
    <string name="printerModel_title">PrinterModel</string>
    <string name="printerModel_value">Select the printer model </string>
    <string name="ErrorMessage_WRONG_OS">Android OS is not supported</string>
    <string name="ErrorMessage_NO_USB">USB device is not found</string>
    <string name="port_title">Port</string>
    <string name="port_value">Select the port</string>
    <string name="address_title">IP address</string>
    <string name="address_value">Set the number of ip address </string>
    <string name="macAddress_title">MAC address</string>
    <string name="macAddress_value">Set the number of mac address </string>
    <string name="paperSize_title">Paper size</string>
    <string name="paperSize_value">Select the paper size </string>
    <string name="orientation_title">Printing orientation</string>
</resources>