<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.multimedia.aes.gestnet_sgsv2.nucleo.Incidencias"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nueva_incidencia"
        android:id="@+id/textView10"
        android:textColor="#F47435"
        android:textSize="19dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="90dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F47435"
        android:paddingTop="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"></LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/incidencias_resueltas_en_periodo"
        android:id="@+id/textView11"
        android:textSize="10dp"
        android:textColor="#F47435"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="17"
        android:ems="10"
        android:id="@+id/etIncidencia"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/edit_texts_naranja"
        android:textSize="15dp"
        android:textColor="#666"
        android:layout_marginRight="15dp"
        android:gravity="top"
        android:padding="5dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/introducir_nombre"
        android:id="@+id/textView34"
        android:textColor="#F47435"
        android:textSize="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNombreTecnico"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_texts_naranja"
        android:gravity="top"
        android:textColor="#666"
        android:textSize="15dp"
        android:padding="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:id="@+id/btnEnviarIncidencia"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/botones"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />
</LinearLayout>
